Add recover rule for assignment and init statements